--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "tig"
 version = "0.1.0"
-description = "AI coding agent, created using LlamaIndex workflow."
+description = "A terminal-based AI coding agent, similar to Claude Code, OpenAI Codex etc."
 readme = "README.md"
 authors = [
     { name = "Rohan", email = "rsrohan99@gmail.com" }
