--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,10 +10,10 @@ requires-python = ">=3.12.9"
 dependencies = [
     "llama-index==0.12.28",
     "llama-index-core==0.12.28",
-    "llama-index-llms-gemini==0.4.14",
-    "llama-index-llms-anthropic==0.6.10",
-    "llama-index-llms-openai==0.3.37",
-    "llama-index-utils-workflow==0.3.0",
+    "llama-index-llms-gemini>=0.4.14",
+    "llama-index-llms-anthropic>=0.6.10",
+    "llama-index-llms-openai>=0.3.37",
+    "llama-index-utils-workflow>=0.3.0",
     "python-dotenv==1.1.0",
     "inquirer==3.4.0",
     "pathspec==0.12.1",
@@ -25,6 +25,10 @@ dependencies = [
     "tree-sitter-typescript>=0.23.2",
     "diff-match-patch>=20241021",
     "psutil>=7.0.0",
+    "llama-index-llms-ollama>=0.5.4",
+    "llama-index-llms-groq>=0.3.1",
+    "llama-index-llms-openrouter>=0.3.1",
+    "llama-index-llms-deepseek>=0.1.1",
 ]
 
 [project.scripts]
