--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ requires-python = ">=3.12.9"
 dependencies = [
     "llama-index==0.12.28",
     "llama-index-core==0.12.28",
-    "llama-index-llms-gemini>=0.4.14",
+    "llama-index-llms-google-genai>=0.1.9",
     "llama-index-llms-anthropic>=0.6.10",
     "llama-index-llms-openai>=0.3.37",
     "llama-index-utils-workflow>=0.3.0",
