--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
 GOOGLE_API_KEY=""
+TIG_MODEL="gemini-2.0-flash"
+TIG_PROVIDER="google" # available providers: [google, openai, anthropic, deepseek, groq, ollama, openrouter]
+
+# Provide the right API key variable for the right model e.g. `GOOGLE_API_KEY` for Gemini, `OPENAI_API_KEY` for OpenAI, `ANTHROPIC_API_KEY` for Claude, etc.
