--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,3 +37,6 @@ tig = "tig:main"
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/tig"]
